Se añade funcionalidad Typewriter a TributePage y SurveyForm

--- a/SurveyForm/css/Style.css
+++ b/SurveyForm/css/Style.css
@@ -5,9 +5,18 @@ body{
   color: #ffffff;
 }
 
+*{
+  color:#000000;
+}
+
 .title-center{
   text-align: center;
   font-weight: bold;
+}
+
+
+#title{
+  text-align: center;
 }
 
 .text-center{
